--- a/ClientMCR/SearchWindow.xaml
+++ b/ClientMCR/SearchWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ClientMCR.MainWindow"
+﻿<Window x:Class="ClientMCR.SearchWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,31 +6,25 @@
         xmlns:local="clr-namespace:ClientMCR"
         mc:Ignorable="d"
         WindowStartupLocation="Manual" Left="10" Top="10"
-        Title="" Height="450" Width="800" Background="#FF5B689D">
+        Title="SearchWindow" Height="450" Width="800" Background="#FF5B689D">
     <!--Manage Customer Relations-->
     <!--#5B689D color of back ground-->
     <!--#C8D1F4 color of menus-->
-    <!--<Grid>
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height ="1*"/>
             <RowDefinition Height ="4*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*">
-                -->
-    <!--<TextBlock Text="Search by Company"/>-->
-    <!--
+                <!--<TextBlock Text="Search by Company"/>-->
             </ColumnDefinition>
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-        
-        -->
-    <!--Header-->
-    <!--
+
+        <!--Header-->
         <Border Grid.ColumnSpan="2" Background="#C8D1F4">
-            -->
-    <!--The header needs to contain an image and text block to be displayed-->
-    <!--
+            <!--The header needs to contain an image and text block to be displayed-->
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Image Source="/Images/handrawn-spaceship.jpg" Height="80" Margin="5"/>
                 <TextBlock Text="Manage Customer Relations" FontSize="40"
@@ -38,10 +32,8 @@
 
             </StackPanel>
         </Border>
-        
-        -->
-    <!--Navigation-->
-    <!--
+
+        <!--Navigation-->
         <Grid Grid.Row="1" Grid.Column="0" VerticalAlignment="Top" >
             <StackPanel>
                 <Grid>
@@ -103,9 +95,7 @@
                     </Grid>
                 </StackPanel>
                 <StackPanel Grid.Row="2" VerticalAlignment="Center" >
-                    -->
-    <!--outside the Company and Customer search area -->
-    <!--
+                    <!--outside the Company and Customer search area -->
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
@@ -146,25 +136,22 @@
                     </Grid>
                 </StackPanel>
             </StackPanel>
-            
-   
+
+
         </Grid>
 
-        -->
-    <!--MainArea-->
-    <!--
+        <!--MainArea-->
         <Grid Grid.Row="1" Grid.Column="1"  >
             <StackPanel>
                 <Border BorderThickness="10, 10, 10, 10">
-                    -->
-    <!--<Grid>
+                    <!--<Grid>
                         <ListView Name="DynamicSearchWindow" >
                             
                         </ListView>
                     </Grid>-->
-    <!--
                 </Border>
             </StackPanel>
         </Grid>
-    </Grid>-->
+    </Grid>
 </Window>
+
