--- a/ClientMCR/SearchWindow.xaml
+++ b/ClientMCR/SearchWindow.xaml
@@ -38,60 +38,16 @@
             <StackPanel>
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="8*"/>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="8*"/>
-                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition Width="5*"/>
                     </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="1*"/>
-                    </Grid.RowDefinitions>
-                    <StackPanel Grid.Column="1" Grid.Row="0" >
-                        <Button Content="empty" IsEnabled="False" Visibility ="Hidden"/>
-                    </StackPanel>
-                    <TextBlock Text="Search by Company" FontSize="20" Grid.Column="1" Grid.Row="1" />
-                    <StackPanel Grid.Row="2" Grid.Column="1"  >
-                        <!--VerticalAlignment="Center"-->
+                    <StackPanel Grid.Column="0" Grid.Row="0">
                         <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="1*"/>
-                                <RowDefinition Height="1*"/>
-                                <RowDefinition Height="1*"/>
-                                <RowDefinition Height="1*"/>
-                                <RowDefinition Height="1*"/>
-                            </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="2*"/>
-                                <ColumnDefinition Width="4*"/>
+                                <ColumnDefinition Width="1*"/>
+                                <ColumnDefinition Width="16*"/>
+                                <ColumnDefinition Width="1*"/>
                             </Grid.ColumnDefinitions>
-                        
-                            <TextBlock Text="Company Name   " Grid.Column="0" Grid.Row="1" />
-                            <TextBox x:Name="CompanyNameBox" Text="" Grid.Column="1" Grid.Row="1" />
-                            <TextBlock Text="Company ID   " Grid.Column="0" Grid.Row="2" />
-                            <TextBox x:Name="CompanyIDBox" Text="" Grid.Column="1" Grid.Row="2" />
-                            <TextBlock Text="Phone #" Grid.Column="0" Grid.Row="3" />
-                            <TextBox x:Name="CompanyPhoneNumberBox" Text="" Grid.Column="1" Grid.Row="3"/>
-                            <TextBlock Text="eMail" Grid.Column="0" Grid.Row="4" />
-                            <TextBox x:Name="CompanyeMailBox" Text="" Grid.Column="1" Grid.Row="4"/>
-                        </Grid>
-                    </StackPanel>
-                    <StackPanel Grid.Column="1" Grid.Row="3" >
-                        <Button Content="empty" IsEnabled="False" Visibility ="Hidden"/>
-                    </StackPanel>
-                    <TextBlock Text="Search by Customer" FontSize="20" Grid.Column="1" Grid.Row="4" />
-                    <StackPanel Grid.Column="1" Grid.Row="5" >
-                        <!--VerticalAlignment="Center"-->
-                    
-                        <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"/>
                                 <RowDefinition Height="1*"/>
@@ -99,67 +55,138 @@
                                 <RowDefinition Height="1*"/>
                                 <RowDefinition Height="1*"/>
                                 <RowDefinition Height="1*"/>
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <!--Auto-->
-                                <ColumnDefinition Width="2*"/>
-                                <ColumnDefinition Width="4*"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Text="First Name           " Grid.Column="0" Grid.Row="1" />
-                            <TextBox x:Name="CustomerFirstNameBox" Text="" Grid.Column="1" Grid.Row="1" />
-                            <TextBlock Text="Last Name   " Grid.Column="0" Grid.Row="2" />
-                            <TextBox x:Name="CustomerLastNameBox" Text="" Grid.Column="1" Grid.Row="2" />
-                            <TextBlock Text="Customer ID   " Grid.Column="0" Grid.Row="3" />
-                            <TextBox x:Name="CustomerIDBox" Text="" Grid.Column="1" Grid.Row="3" />
-                            <TextBlock Text="Phone #" Grid.Column="0" Grid.Row="4" />
-                            <TextBox x:Name="CustomerPhoneNumberBox" Text="" Grid.Column="1" Grid.Row="4"/>
-                            <TextBlock Text="eMail" Grid.Column="0" Grid.Row="5" />
-                            <TextBox x:Name="CustomereMailBox" Text="" Grid.Column="1" Grid.Row="5"/>
-                        </Grid>
-                    </StackPanel>
-                    <StackPanel Grid.Column="1" Grid.Row="6" VerticalAlignment="Center" >
-                        <!--outside the Company and Customer search area -->
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="1*"/>
-                                <RowDefinition Height="1*"/>
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition Width="1*"/>
-                                <ColumnDefinition Width="1*"/>
-                                <ColumnDefinition Width="1*"/>
-                                <ColumnDefinition Width="1*"/>
-                                <ColumnDefinition Width="1*"/>
-                                <ColumnDefinition Width="1*"/>
-                            </Grid.ColumnDefinitions>
-                            <Button Content="empty" Grid.Column="5" Grid.Row="0" IsEnabled="False" Visibility ="Hidden"/>
-                            <Button Content="Search" Grid.Column="5" Grid.Row="1" Click="CompanyCustomerSearch" />
-                            <Button Content="empty" Grid.Column="5" Grid.Row="2" IsEnabled="False" Visibility ="Hidden"/>
-                        </Grid>
-                    </StackPanel>
-                    <StackPanel Grid.Column="1" Grid.Row="7" VerticalAlignment="Center" >
-                        <Grid>
-                            <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"/>
                                 <RowDefinition Height="1*"/>
                                 <RowDefinition Height="1*"/>
                             </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="1*"/>
-                                <ColumnDefinition Width="3*"/>
-                                <ColumnDefinition Width="1*"/>
-                                <ColumnDefinition Width="3*"/>
-                                <ColumnDefinition Width="1*"/>
-                            </Grid.ColumnDefinitions>
-                            <Button Content="Add Company" Grid.Column="1" Grid.Row="0"/>
-                            <Button Content="Add Customer" Grid.Column="3" Grid.Row="0"/>
-                            <Button Content="empty" Grid.Column="3" Grid.Row="1" IsEnabled="False" Visibility ="Hidden"/>
+                            <StackPanel Grid.Column="1" Grid.Row="0" >
+                                <Button Content="empty" IsEnabled="False" Visibility ="Hidden"/>
+                            </StackPanel>
+                            <TextBlock Text="Search by Company" FontSize="20" Grid.Column="1" Grid.Row="1" Background="#C8D1F4" />
+                            <StackPanel Grid.Row="2" Grid.Column="1"  >
+                                <!--VerticalAlignment="Center"-->
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="1*"/>
+                                        <RowDefinition Height="1*"/>
+                                        <RowDefinition Height="1*"/>
+                                        <RowDefinition Height="1*"/>
+                                        <RowDefinition Height="1*"/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="2*"/>
+                                        <ColumnDefinition Width="4*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBlock Text="Company Name   " Grid.Column="0" Grid.Row="1" Background="#C8D1F4"  />
+                                    <TextBox x:Name="CompanyNameBox" Text="" Grid.Column="1" Grid.Row="1" />
+                                    <TextBlock Text="Company ID   " Grid.Column="0" Grid.Row="2" Background="#C8D1F4"  />
+                                    <TextBox x:Name="CompanyIDBox" Text="" Grid.Column="1" Grid.Row="2" />
+                                    <TextBlock Text="Phone #" Grid.Column="0" Grid.Row="3" Background="#C8D1F4" />
+                                    <TextBox x:Name="CompanyPhoneNumberBox" Text="" Grid.Column="1" Grid.Row="3"/>
+                                    <TextBlock Text="eMail" Grid.Column="0" Grid.Row="4" Background="#C8D1F4" />
+                                    <TextBox x:Name="CompanyeMailBox" Text="" Grid.Column="1" Grid.Row="4"/>
+                                </Grid>
+                            </StackPanel>
+                            <StackPanel Grid.Column="1" Grid.Row="3" >
+                                <Button Content="empty" IsEnabled="False" Visibility ="Hidden"/>
+                            </StackPanel>
+                            <TextBlock Text="Search by Customer" FontSize="20" Grid.Column="1" Grid.Row="4" Background="#C8D1F4" />
+                            <StackPanel Grid.Column="1" Grid.Row="5" >
+                                <!--VerticalAlignment="Center"-->
+
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="1*"/>
+                                        <RowDefinition Height="1*"/>
+                                        <RowDefinition Height="1*"/>
+                                        <RowDefinition Height="1*"/>
+                                        <RowDefinition Height="1*"/>
+                                        <RowDefinition Height="1*"/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <!--Auto-->
+                                        <ColumnDefinition Width="2*"/>
+                                        <ColumnDefinition Width="4*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Text="First Name           " Grid.Column="0" Grid.Row="1" Background="#C8D1F4"  />
+                                    <TextBox x:Name="CustomerFirstNameBox" Text="" Grid.Column="1" Grid.Row="1" />
+                                    <TextBlock Text="Last Name   " Grid.Column="0" Grid.Row="2" Background="#C8D1F4" />
+                                    <TextBox x:Name="CustomerLastNameBox" Text="" Grid.Column="1" Grid.Row="2" />
+                                    <TextBlock Text="Customer ID   " Grid.Column="0" Grid.Row="3" Background="#C8D1F4" />
+                                    <TextBox x:Name="CustomerIDBox" Text="" Grid.Column="1" Grid.Row="3" />
+                                    <TextBlock Text="Phone #" Grid.Column="0" Grid.Row="4" Background="#C8D1F4" />
+                                    <TextBox x:Name="CustomerPhoneNumberBox" Text="" Grid.Column="1" Grid.Row="4"/>
+                                    <TextBlock Text="eMail" Grid.Column="0" Grid.Row="5" Background="#C8D1F4" />
+                                    <TextBox x:Name="CustomereMailBox" Text="" Grid.Column="1" Grid.Row="5"/>
+                                </Grid>
+                            </StackPanel>
+                            <StackPanel Grid.Column="1" Grid.Row="6" VerticalAlignment="Center" >
+                                <!--outside the Company and Customer search area -->
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="1*"/>
+                                        <RowDefinition Height="1*"/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="2*"/>
+                                        <ColumnDefinition Width="2*"/>
+                                        <ColumnDefinition Width="3*"/>
+                                        <ColumnDefinition Width="2*"/>
+                                        <ColumnDefinition Width="2*"/>
+                                        <ColumnDefinition Width="2*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Button Content="empty" Grid.Column="5" Grid.Row="0" IsEnabled="False" Visibility ="Hidden"/>
+                                    <Button Content="Search" Grid.Column="5" Grid.Row="1" Click="CompanyCustomerSearch" />
+                                    <Button Content="Clear Form" Grid.Column="3" Grid.Row="1" Click="ClearCompanyCustomerSearch" />
+                                    <Button Content="empty" Grid.Column="5" Grid.Row="2" IsEnabled="False" Visibility ="Hidden"/>
+                                </Grid>
+                            </StackPanel>
+                            <StackPanel Grid.Column="1" Grid.Row="7" VerticalAlignment="Center" >
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="1*"/>
+                                        <RowDefinition Height="1*"/>
+                                        <RowDefinition Height="1*"/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="1*"/>
+                                        <ColumnDefinition Width="3*"/>
+                                        <ColumnDefinition Width="1*"/>
+                                        <ColumnDefinition Width="3*"/>
+                                        <ColumnDefinition Width="1*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Button Content="Add Company" Grid.Column="1" Grid.Row="0"/>
+                                    <Button Content="Add Customer" Grid.Column="3" Grid.Row="0"/>
+                                    <Button Content="empty" Grid.Column="3" Grid.Row="1" IsEnabled="False" Visibility ="Hidden"/>
+                                </Grid>
+                            </StackPanel>
+                            <StackPanel Grid.Column="1" Grid.Row="8">
+                                <Button Content="empty" IsEnabled="False" Visibility ="Hidden"/>
+                            </StackPanel>
                         </Grid>
                     </StackPanel>
-                    <StackPanel Grid.Column="1" Grid.Row="8">
-                        <Button Content="empty" IsEnabled="False" Visibility ="Hidden"/>
+                    <!--MainSearchArea-->
+                    <StackPanel Grid.Column="1" Grid.Row="0">
+                        <Border BorderThickness="20, 20, 20, 0">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="1*"/>
+                                    <ColumnDefinition Width="1*"/>
+                                    <ColumnDefinition Width="1*"/>
+                                    <ColumnDefinition Width="1*"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="1*"/>
+                                </Grid.RowDefinitions>
+                                <TextBlock Text="Company Name" Grid.Column="0" Grid.Row="0" Background="#C8D1F4" />
+                                <TextBlock Text="Company ID" Grid.Column="1" Grid.Row="0" Background="#C8D1F4" />
+                                <TextBlock Text="Company Phone #" Grid.Column="2" Grid.Row="0" Background="#C8D1F4" />
+                                <TextBlock Text="Company eMail" Grid.Column="3" Grid.Row="0" Background="#C8D1F4" />
+                            </Grid>
+                        </Border>
                     </StackPanel>
                 </Grid>
             </StackPanel>
