--- a/ClientMCR/AddCompanyEntity.xaml
+++ b/ClientMCR/AddCompanyEntity.xaml
@@ -12,7 +12,6 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="2*"/>
-                
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="1*"/>
@@ -22,8 +21,8 @@
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
-            
-            <TextBlock Text="Company to Add" FontSize="20" Grid.Column="0" Grid.Row="0" Background="#C8D1F4" />
+
+            <TextBlock Text="Company to Add / Update" FontSize="20" Grid.Column="0" Grid.Row="0" Background="#C8D1F4" />
             <StackPanel Grid.Column="0" Grid.Row="1">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -53,9 +52,34 @@
                     <TextBox x:Name="CompanyTypeofBusiness" Text="" Grid.Column="1" Grid.Row="6"/>
                 </Grid>
             </StackPanel>
+            <StackPanel Grid.Column="1" Grid.Row="1">
+                <!--1st number is left margin, 2nd is top margin, 3rd is right margin, and 4th is bottom margin-->
+                <Border BorderThickness="20, 0, 20, 20">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                        </Grid.RowDefinitions>
+                        <TextBlock x:Name="CompanyName" Text="Company Name   " Grid.Column="0" Grid.Row="0" Background="#C8D1F4"  />
+                        <TextBlock x:Name="EntityID" Text="Entity ID   " Grid.Column="0" Grid.Row="1" Background="#C8D1F4"  />
+                        <TextBlock x:Name="CompanyID" Text="Company ID   " Grid.Column="0" Grid.Row="2" Background="#C8D1F4"  />
+                        <TextBlock x:Name="PhoneNumber" Text="Phone #" Grid.Column="0" Grid.Row="3" Background="#C8D1F4" />
+                        <TextBlock x:Name="eMail" Text="eMail" Grid.Column="0" Grid.Row="5" Background="#C8D1F4" />
+                        <TextBlock x:Name="TypeofBusiness" Text="Type of Business" Grid.Column="0" Grid.Row="6" Background="#C8D1F4" />
+                    </Grid>
+                </Border>
+            </StackPanel>
             <TextBlock Text="Company Address" FontSize="12" Grid.Column="0" Grid.Row="2" Background="#C8D1F4" />
             <StackPanel Grid.Column="0" Grid.Row="2">
-                
+
             </StackPanel>
             <StackPanel Grid.Column="0" Grid.Row="3">
                 <Grid>
@@ -102,7 +126,7 @@
                         <ColumnDefinition Width="2*"/>
                     </Grid.ColumnDefinitions>
                     <Button Content="empty" Grid.Column="5" Grid.Row="0" IsEnabled="False" Visibility ="Hidden"/>
-                    <Button Content="Save Company" Grid.Column="5" Grid.Row="1" Click="SaveCompanyEntityButton" />
+                    <Button Content="Save Company" Grid.Column="4" Grid.Row="1" Click="SaveCompanyEntityButton" Grid.ColumnSpan="2" Height="20" Margin="25,0,0,0" Grid.RowSpan="2" VerticalAlignment="Top" />
                     <Button Content="Clear Form" Grid.Column="3" Grid.Row="1" Click="ClearCompanyEntityButton" />
                     <Button Content="empty" Grid.Column="5" Grid.Row="2" IsEnabled="False" Visibility ="Hidden"/>
                 </Grid>
