--- a/ClientMCR/AddContactEntityToCompanyPage.xaml
+++ b/ClientMCR/AddContactEntityToCompanyPage.xaml
@@ -1,12 +1,13 @@
-﻿<Window x:Class="ClientMCR.AddCompanyEntity"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ClientMCR"
-        mc:Ignorable="d"
-        WindowStartupLocation="Manual" Left="10" Top="10"
-        Title="AddCompanyEntityForm" Height="600" Width="800" Background="#FF5B689D">
+﻿<Page x:Class="ClientMCR.AddContactEntityToCompanyPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:ClientMCR"
+      mc:Ignorable="d" 
+      d:DesignHeight="600" d:DesignWidth="800"
+      Title="AddContactEntityToCompanyPage" Background="#FF5B689D">
+
     <Border BorderThickness="20, 20, 20, 20">
         <Grid>
             <Grid.ColumnDefinitions>
@@ -22,7 +23,7 @@
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
 
-            <TextBlock Text="Company to Add / Update" FontSize="20" Grid.Column="0" Grid.Row="0" Background="#C8D1F4" />
+            <TextBlock Text="Contact to Add / Update" FontSize="20" Grid.Column="0" Grid.Row="0" Background="#C8D1F4" />
             <StackPanel Grid.Column="0" Grid.Row="1">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -38,20 +39,20 @@
                         <RowDefinition Height="1*"/>
                         <RowDefinition Height="1*"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Text="Company Name   " Grid.Column="0" Grid.Row="0" Background="#C8D1F4"  />
-                    <TextBox x:Name="CompanyNameBox" Text="" Grid.Column="1" Grid.Row="0" />
+                    <TextBlock Text="Contact Name   " Grid.Column="0" Grid.Row="0" Background="#C8D1F4"  />
+                    <TextBox x:Name="ContactNameBox" Text="" Grid.Column="1" Grid.Row="0" />
                     <TextBlock Text="Entity ID   " Grid.Column="0" Grid.Row="1" Background="#C8D1F4"  />
-                    <TextBlock Text="Company ID   " Grid.Column="1" Grid.Row="1" Background="#C8D1F4"  />
-                    <TextBlock Text="Company ID   " Grid.Column="0" Grid.Row="2" Background="#C8D1F4"  />
-                    <TextBox x:Name="CompanyIDBox" Text="" Grid.Column="1" Grid.Row="2" />
+                    <TextBox x:Name="EntityID" Text="Object ID   " Grid.Column="1" Grid.Row="1" Background="#C8D1F4"  />
+                    <TextBlock Text="Contact ID   " Grid.Column="0" Grid.Row="2" Background="#C8D1F4"  />
+                    <TextBox x:Name="ContactIDBox" Text="" Grid.Column="1" Grid.Row="2" />
                     <TextBlock Text="Phone #" Grid.Column="0" Grid.Row="3" Background="#C8D1F4" />
-                    <TextBox x:Name="CompanyPhoneNumberBox" Text="" Grid.Column="1" Grid.Row="3"/>
+                    <TextBox x:Name="ContactPhoneNumberBox" Text="" Grid.Column="1" Grid.Row="3"/>
                     <TextBlock Text="eMail" Grid.Column="0" Grid.Row="5" Background="#C8D1F4" />
-                    <TextBox x:Name="CompanyeMailBox" Text="" Grid.Column="1" Grid.Row="5"/>
-                    <TextBlock Text="Type of Business" Grid.Column="0" Grid.Row="6" Background="#C8D1F4" />
-                    <TextBox x:Name="CompanyTypeofBusiness" Text="" Grid.Column="1" Grid.Row="6"/>
+                    <TextBox x:Name="ContacteMailBox" Text="" Grid.Column="1" Grid.Row="5"/>
                 </Grid>
+                <!--<TextBlock x:Name="NumberOfRecords" TextWrapping="Wrap" Text=""/>-->
             </StackPanel>
+            <!--<Border BorderThickness="20, 0, 20, 20">-->
             <StackPanel Grid.Column="1" Grid.Row="1">
                 <!--1st number is left margin, 2nd is top margin, 3rd is right margin, and 4th is bottom margin-->
                 <Border BorderThickness="20, 0, 20, 20">
@@ -67,17 +68,22 @@
                             <RowDefinition Height="1*"/>
                             <RowDefinition Height="1*"/>
                             <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
                         </Grid.RowDefinitions>
-                        <TextBlock x:Name="CompanyName" Text="Company Name   " Grid.Column="0" Grid.Row="0" Background="#C8D1F4"  />
-                        <TextBlock x:Name="EntityID" Text="Entity ID   " Grid.Column="0" Grid.Row="1" Background="#C8D1F4"  />
-                        <TextBlock x:Name="CompanyID" Text="Company ID   " Grid.Column="0" Grid.Row="2" Background="#C8D1F4"  />
-                        <TextBlock x:Name="PhoneNumber" Text="Phone #" Grid.Column="0" Grid.Row="3" Background="#C8D1F4" />
-                        <TextBlock x:Name="eMail" Text="eMail" Grid.Column="0" Grid.Row="5" Background="#C8D1F4" />
-                        <TextBlock x:Name="TypeofBusiness" Text="Type of Business" Grid.Column="0" Grid.Row="6" Background="#C8D1F4" />
+
+                        <TextBlock x:Name="CompanyName2" Text="Company Name   " Grid.Column="0" Grid.Row="0" Background="#C8D1F4"  />
+                        <TextBlock x:Name="EntityID2" Text="Entity ID   " Grid.Column="0" Grid.Row="1" Background="#C8D1F4"  />
+                        <TextBlock x:Name="CompanyID2" Text="Company ID   " Grid.Column="0" Grid.Row="2" Background="#C8D1F4"  />
+                        <TextBlock x:Name="PhoneNumber2" Text="Phone #" Grid.Column="0" Grid.Row="3" Background="#C8D1F4" />
+                        <TextBlock x:Name="eMail2" Text="eMail" Grid.Column="0" Grid.Row="4" Background="#C8D1F4" />
+                        <TextBlock x:Name="TypeofBusiness2" Text="Type of Business" Grid.Column="0" Grid.Row="5" Background="#C8D1F4" />
+
+
                     </Grid>
                 </Border>
             </StackPanel>
-            <TextBlock Text="Company Address" FontSize="12" Grid.Column="0" Grid.Row="2" Background="#C8D1F4" />
+            <!--</Border>-->
+            <TextBlock Text="Contact Address" FontSize="12" Grid.Column="0" Grid.Row="2" Background="#C8D1F4" />
             <StackPanel Grid.Column="0" Grid.Row="2">
 
             </StackPanel>
@@ -108,6 +114,31 @@
                     <TextBox x:Name="AddressZipCode" Text="" Grid.Column="1" Grid.Row="6"/>
                 </Grid>
             </StackPanel>
+            <StackPanel Grid.Column="1" Grid.Row="3">
+                <Border BorderThickness="20, 0, 20, 20">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                        </Grid.RowDefinitions>
+                        <TextBlock x:Name="ContactName2" Text="Contact Name   " Grid.Column="0" Grid.Row="0" Background="#C8D1F4"  />
+                        <TextBlock x:Name="ContactEntityID2" Text="Contact Entity ID   " Grid.Column="0" Grid.Row="1" Background="#C8D1F4"  />
+                        <TextBlock x:Name="ContactID2" Text="Contact ID   " Grid.Column="0" Grid.Row="2" Background="#C8D1F4"  />
+                        <TextBlock x:Name="ContactPhoneNumber2" Text="Phone #" Grid.Column="0" Grid.Row="3" Background="#C8D1F4" />
+                        <TextBlock x:Name="ContacteMail2" Text="eMail" Grid.Column="0" Grid.Row="4" Background="#C8D1F4" />
+                        <TextBlock x:Name="DataSaved" HorizontalAlignment="Center" Text="" Grid.Column="0" Grid.Row="5" Background="#C8D1F4" />
+                    </Grid>
+                </Border>
+            </StackPanel>
+
             <StackPanel Grid.Column="0" Grid.Row="4" VerticalAlignment="Center" >
                 <!--Clear Form and Search Button -->
                 <Grid>
@@ -126,8 +157,8 @@
                         <ColumnDefinition Width="2*"/>
                     </Grid.ColumnDefinitions>
                     <Button Content="empty" Grid.Column="5" Grid.Row="0" IsEnabled="False" Visibility ="Hidden"/>
-                    <Button Content="Save Company" Grid.Column="4" Grid.Row="1" Click="SaveCompanyEntityButton" Grid.ColumnSpan="2" Height="20" Margin="25,0,0,0" Grid.RowSpan="2" VerticalAlignment="Top" />
-                    <Button Content="Clear Form" Grid.Column="3" Grid.Row="1" Click="ClearCompanyEntityButton" />
+                    <Button Content="Save Contact" Grid.Column="4" Grid.Row="1" Click="SaveContactEntityButton" Grid.ColumnSpan="2" Height="20" Margin="25,0,0,20" Grid.RowSpan="2" VerticalAlignment="Bottom" />
+                    <Button Content="Clear Form" Grid.Column="2" Grid.Row="1" Click="ClearCompanyEntityButton" Grid.ColumnSpan="2" Height="20" Margin="26,0,0,0" Grid.RowSpan="2" VerticalAlignment="Top" />
                     <Button Content="empty" Grid.Column="5" Grid.Row="2" IsEnabled="False" Visibility ="Hidden"/>
                 </Grid>
             </StackPanel>
@@ -145,11 +176,12 @@
                         <ColumnDefinition Width="4*"/>
                         <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
-                    <Button Content="Add Company" Grid.Column="1" Grid.Row="0" Click="AddCompanyEntityButton" Visibility="Hidden" IsEnabled="False" />
-                    <Button Content="Company Search" Grid.Column="3" Grid.Row="0" Click="SearchWindowButton" />
+                    <!--<Button Content="Add Company" Grid.Column="1" Grid.Row="0" Click="AddCompanyEntityButton" Visibility="Hidden" IsEnabled="False" />-->
+                    <Button Content="Contact Search" Grid.Column="1" Grid.Row="0" Click="ContactSearchButton" />
+                    <Button Content="Company Search" Grid.Column="2" Grid.Row="0" Click="CompanySearchButton" Grid.ColumnSpan="2" Height="20" Margin="24,0,0,20" Grid.RowSpan="2" VerticalAlignment="Bottom" />
                     <Button Content="empty" Grid.Column="3" Grid.Row="1" IsEnabled="False" Visibility ="Hidden"/>
                 </Grid>
             </StackPanel>
         </Grid>
     </Border>
-</Window>
+</Page>
