--- a/ClientMCR/CompanySearchPage.xaml
+++ b/ClientMCR/CompanySearchPage.xaml
@@ -1,31 +1,31 @@
-﻿<Window x:Class="ClientMCR.SearchWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ClientMCR"
-        mc:Ignorable="d"
-        WindowStartupLocation="Manual" Left="10" Top="10"
-        Title="SearchWindow" Height="500" Width="800" Background="#FF5B689D">
-    <!--Manage Customer Relations-->
-    <!--#5B689D color of back ground-->
-    <!--#C8D1F4 color of menus-->
+﻿<Page x:Class="ClientMCR.CompanySearchPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:ClientMCR"
+      mc:Ignorable="d" 
+      d:DesignHeight="500" d:DesignWidth="800"
+      Title="SearchPage" Background="#FF5B689D">
+
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height ="1*"/>
+            <!--<RowDefinition Height ="1*"/>-->
             <RowDefinition Height ="4*"/>
         </Grid.RowDefinitions>
-       
+
         <!--Header-->
-        <Border Grid.ColumnSpan="2" Background="#C8D1F4">
-            <!--The header needs to contain an image and text block to be displayed-->
+        <!--<Border Grid.ColumnSpan="2" Background="#C8D1F4">
+            -->
+        <!--The header needs to contain an image and text block to be displayed-->
+        <!--
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Image Source="/Images/handrawn-spaceship.jpg" Height="80" Margin="5"/>
                 <TextBlock Text="Manage Customer Relations" FontSize="40"
-                           VerticalAlignment="Center"/>
+                            VerticalAlignment="Center"/>
 
             </StackPanel>
-        </Border>
+        </Border>-->
 
         <!--Navigation-->
         <Grid Grid.Row="1" Grid.Column="0" VerticalAlignment="Top" >
@@ -135,7 +135,7 @@
                                         <ColumnDefinition Width="2*"/>
                                     </Grid.ColumnDefinitions>
                                     <Button Content="empty" Grid.Column="5" Grid.Row="0" IsEnabled="False" Visibility ="Hidden"/>
-                                    <Button Content="Search" Grid.Column="5" Grid.Row="1" Click="CompanyCustomerSearch" />
+                                    <Button Content="Search" Grid.Column="5" Grid.Row="1" Click="CompanyContactSearch" />
                                     <Button Content="Clear Form" Grid.Column="3" Grid.Row="1" Click="ClearCompanyCustomerSearch" />
                                     <Button Content="empty" Grid.Column="5" Grid.Row="2" IsEnabled="False" Visibility ="Hidden"/>
                                 </Grid>
@@ -189,5 +189,4 @@
             </StackPanel>
         </Grid>
     </Grid>
-</Window>
-
+</Page>
