4/12/2022 - 12:41 PM - 2:36 PM - Phone numbers can be anything from 4 - 11 digits long per microsoft, they also have different seperators and it should be dependant on where the phone number is from for formatting.  which means, address will have to come first.  But I still need to add some sort of filtering when searching for phone numbers.  So that the phone number is trimmed that is provided by the user and the phone number stored in the company/contact file.
4/12/2022 - 3:45 PM - 5:39 PM - I was able to search for parts of code from the web to piece together how to add buttons to a grid that was identified with code behind.  I was able to get it to dynamically assign names from the back end into the buttons.  I need to determine the length of the buttons and have them span the entire length of the search window and add code to load company selected into a new template window.

--- a/ClientMCR/AddCompanyEntityPage.xaml
+++ b/ClientMCR/AddCompanyEntityPage.xaml
@@ -38,6 +38,7 @@
                         <RowDefinition Height="1*"/>
                         <RowDefinition Height="1*"/>
                         <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
                     </Grid.RowDefinitions>
                     <TextBlock Text="Company Name   " Grid.Column="0" Grid.Row="0" Background="#C8D1F4"  />
                     <TextBox x:Name="CompanyNameBox" Text="" Grid.Column="1" Grid.Row="0" />
@@ -47,10 +48,12 @@
                     <TextBox x:Name="CompanyIDBox" Text="" Grid.Column="1" Grid.Row="2" />
                     <TextBlock Text="Phone #" Grid.Column="0" Grid.Row="3" Background="#C8D1F4" />
                     <TextBox x:Name="CompanyPhoneNumberBox" Text="" Grid.Column="1" Grid.Row="3"/>
-                    <TextBlock Text="eMail" Grid.Column="0" Grid.Row="5" Background="#C8D1F4" />
-                    <TextBox x:Name="CompanyeMailBox" Text="" Grid.Column="1" Grid.Row="5"/>
-                    <TextBlock Text="Type of Business" Grid.Column="0" Grid.Row="6" Background="#C8D1F4" />
-                    <TextBox x:Name="CompanyTypeofBusiness" Text="" Grid.Column="1" Grid.Row="6"/>
+                    <TextBlock Text="Phone Extension" Grid.Column="0" Grid.Row="4" Background="#C8D1F4" />
+                    <TextBox x:Name="CompanyPhoneNumberExtensionBox" Text="" Grid.Column="1" Grid.Row="4"/>
+                    <TextBlock Text="eMail" Grid.Column="0" Grid.Row="6" Background="#C8D1F4" />
+                    <TextBox x:Name="CompanyeMailBox" Text="" Grid.Column="1" Grid.Row="6"/>
+                    <TextBlock Text="Type of Business" Grid.Column="0" Grid.Row="7" Background="#C8D1F4" />
+                    <TextBox x:Name="CompanyTypeofBusiness" Text="" Grid.Column="1" Grid.Row="7"/>
                 </Grid>
                 <TextBlock x:Name="NumberOfRecords" TextWrapping="Wrap" Text=""/>
             </StackPanel>
@@ -75,9 +78,10 @@
                         <TextBlock x:Name="EntityID2" Text="Entity ID   " Grid.Column="0" Grid.Row="1" Background="#C8D1F4"  />
                         <TextBlock x:Name="CompanyID2" Text="Company ID   " Grid.Column="0" Grid.Row="2" Background="#C8D1F4"  />
                         <TextBlock x:Name="PhoneNumber2" Text="Phone #" Grid.Column="0" Grid.Row="3" Background="#C8D1F4" />
-                        <TextBlock x:Name="eMail2" Text="eMail" Grid.Column="0" Grid.Row="4" Background="#C8D1F4" />
-                        <TextBlock x:Name="TypeofBusiness2" Text="Type of Business" Grid.Column="0" Grid.Row="5" Background="#C8D1F4" />
-                        <TextBlock x:Name="DataSaved" HorizontalAlignment="Center" Text="" Grid.Column="0" Grid.Row="6" Background="#C8D1F4" />
+                        <TextBlock x:Name="PhoneNumberExtension2" Text="Phone Extension" Grid.Column="0" Grid.Row="4" Background="#C8D1F4" />
+                        <TextBlock x:Name="eMail2" Text="eMail" Grid.Column="0" Grid.Row="5" Background="#C8D1F4" />
+                        <TextBlock x:Name="TypeofBusiness2" Text="Type of Business" Grid.Column="0" Grid.Row="6" Background="#C8D1F4" />
+                        <TextBlock x:Name="DataSaved" HorizontalAlignment="Center" Text="" Grid.Column="0" Grid.Row="7" Background="#C8D1F4" />
                     </Grid>
                 </Border>
             </StackPanel>
