--- a/ClientMCR/ContactSearchPage.xaml
+++ b/ClientMCR/ContactSearchPage.xaml
@@ -1,12 +1,12 @@
-﻿<Page x:Class="ClientMCR.CompanySearchPage"
+﻿<Page x:Class="ClientMCR.ContactSearchPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ClientMCR"
       mc:Ignorable="d" 
-      d:DesignHeight="500" d:DesignWidth="800"
-      Title="SearchPage" Background="#FF5B689D">
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="ContactSearchPage" Background="#FF5B689D">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -28,7 +28,7 @@
         </Border>-->
 
         <!--Navigation-->
-        <Grid Grid.Row="0" Grid.Column="0" VerticalAlignment="Top" >
+        <Grid Grid.Row="1" Grid.Column="0" VerticalAlignment="Top" >
             <StackPanel>
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -56,11 +56,12 @@
                             <StackPanel Grid.Column="1" Grid.Row="0" >
                                 <Button Content="empty" IsEnabled="False" Visibility ="Hidden"/>
                             </StackPanel>
-                            <TextBlock Text="Search by Company" FontSize="20" Grid.Column="1" Grid.Row="1" Background="#C8D1F4" />
+                            <TextBlock Text="Search by Contact" FontSize="20" Grid.Column="1" Grid.Row="1" Background="#C8D1F4" />
                             <StackPanel Grid.Row="2" Grid.Column="1"  >
                                 <!--VerticalAlignment="Center"-->
                                 <Grid>
                                     <Grid.RowDefinitions>
+                                        <RowDefinition Height="1*"/>
                                         <RowDefinition Height="1*"/>
                                         <RowDefinition Height="1*"/>
                                         <RowDefinition Height="1*"/>
@@ -72,16 +73,16 @@
                                         <ColumnDefinition Width="4*"/>
                                     </Grid.ColumnDefinitions>
 
-                                    <TextBlock Text="Company Name   " Grid.Column="0" Grid.Row="0" Background="#C8D1F4"  />
-                                    <TextBox x:Name="CompanyNameBox" Text="" Grid.Column="1" Grid.Row="0" />
-                                    <TextBlock Text="Company ID   " Grid.Column="0" Grid.Row="1" Background="#C8D1F4"  />
-                                    <TextBox x:Name="CompanyIDBox" Text="" Grid.Column="1" Grid.Row="1" />
-                                    <TextBlock Text="Phone #" Grid.Column="0" Grid.Row="2" Background="#C8D1F4" />
-                                    <TextBox x:Name="CompanyPhoneNumberBox" Text="" Grid.Column="1" Grid.Row="2" />
-                                    <TextBlock Text="Phone extension" Grid.Column="0" Grid.Row="3" Background="#C8D1F4" />
-                                    <TextBox x:Name="CompanyPhoneExtensionBox" Text="" Grid.Column="1" Grid.Row="3" />
-                                    <TextBlock Text="eMail" Grid.Column="0" Grid.Row="4" Background="#C8D1F4" />
-                                    <TextBox x:Name="CompanyeMailBox" Text="" Grid.Column="1" Grid.Row="4"/>
+                                    <TextBlock Text="Contact Name   " Grid.Column="0" Grid.Row="1" Background="#C8D1F4"  />
+                                    <TextBox x:Name="ContactNameBox" Text="" Grid.Column="1" Grid.Row="1" />
+                                    <TextBlock Text="Contact ID   " Grid.Column="0" Grid.Row="2" Background="#C8D1F4"  />
+                                    <TextBox x:Name="ContactIDBox" Text="" Grid.Column="1" Grid.Row="2" />
+                                    <TextBlock Text="Phone #" Grid.Column="0" Grid.Row="3" Background="#C8D1F4" />
+                                    <TextBox x:Name="ContactPhoneNumberBox" Text="" Grid.Column="1" Grid.Row="3"/>
+                                    <TextBlock Text="Phone # Extension" Grid.Column="0" Grid.Row="4" Background="#C8D1F4" />
+                                    <TextBox x:Name="ContactPhoneNumberExtensionBox" Text="" Grid.Column="1" Grid.Row="4"/>
+                                    <TextBlock Text="eMail" Grid.Column="0" Grid.Row="5" Background="#C8D1F4" />
+                                    <TextBox x:Name="ContacteMailBox" Text="" Grid.Column="1" Grid.Row="5"/>
                                 </Grid>
                             </StackPanel>
                             <StackPanel Grid.Column="1" Grid.Row="3" >
@@ -137,9 +138,10 @@
                                         <ColumnDefinition Width="2*"/>
                                     </Grid.ColumnDefinitions>
                                     <Button Content="empty" Grid.Column="5" Grid.Row="0" IsEnabled="False" Visibility ="Hidden"/>
-                                    <Button Content="Search" Grid.Column="5" Grid.Row="1" Click="CompanySearch" />
-                                    <Button Content="Clear Form" Grid.Column="3" Grid.Row="1" Click="ClearCompanySearch" />
+                                    <Button Content="Search" Grid.Column="5" Grid.Row="2" Click="ContactSearch" Grid.ColumnSpan="2" Margin="0,0,41,0" />
+                                    <Button Content="Clear Form" Grid.Column="2" Grid.Row="1" Click="ClearContactSearch" Grid.ColumnSpan="3" Height="20" Margin="41,0,41,0" Grid.RowSpan="2" VerticalAlignment="Top" />
                                     <Button Content="empty" Grid.Column="5" Grid.Row="2" IsEnabled="False" Visibility ="Hidden"/>
+                                    
                                 </Grid>
                             </StackPanel>
                             <StackPanel Grid.Column="1" Grid.Row="7" VerticalAlignment="Center" >
@@ -151,15 +153,15 @@
                                     </Grid.RowDefinitions>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="1*"/>
-                                        <ColumnDefinition Width="3*"/>
+                                        <ColumnDefinition Width="4*"/>
                                         <ColumnDefinition Width="1*"/>
-                                        <ColumnDefinition Width="3*"/>
+                                        <ColumnDefinition Width="4*"/>
                                         <ColumnDefinition Width="1*"/>
                                     </Grid.ColumnDefinitions>
                                     <!--This line is commented out because it belongs on another form/page - Search by customer info should be seperate from company search info-->
-                                    <Button Content="Add Company" Grid.Column="1" Grid.Row="0" Click="AddCompanyEntityButton"  />
-                                    <Button Content="Search Contact" Grid.Column="3" Grid.Row="0" Click="SearchContact"/>
+                                    <!--<Button Content="Add Company" Grid.Column="1" Grid.Row="0" Click="AddCompanyEntityButton"  />-->
                                     <!--<Button Content="Add Customer" Grid.Column="3" Grid.Row="0"/>-->
+                                    <Button Content="Search Company" Grid.Column="3" Grid.Row="2" Click="CompanySearch" />
                                     <Button Content="empty" Grid.Column="3" Grid.Row="1" IsEnabled="False" Visibility ="Hidden"/>
                                 </Grid>
                             </StackPanel>
@@ -171,7 +173,7 @@
                     <!--MainSearchArea-->
                     <StackPanel Grid.Column="1" Grid.Row="0">
                         <Border BorderThickness="20, 20, 20, 0">
-                            <Grid x:Name="SearchWindowGrid">
+                            <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="1*"/>
                                     <ColumnDefinition Width="1*"/>
@@ -181,10 +183,10 @@
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="1*"/>
                                 </Grid.RowDefinitions>
-                                <TextBlock Text="Company Name" Grid.Column="0" Grid.Row="0" Background="#C8D1F4" />
-                                <TextBlock Text="Company ID" Grid.Column="1" Grid.Row="0" Background="#C8D1F4" />
-                                <TextBlock Text="Company Phone #" Grid.Column="2" Grid.Row="0" Background="#C8D1F4" />
-                                <TextBlock Text="Company eMail" Grid.Column="3" Grid.Row="0" Background="#C8D1F4" />
+                                <TextBlock Text="Contact Name" Grid.Column="0" Grid.Row="0" Background="#C8D1F4" />
+                                <TextBlock Text="Contact ID" Grid.Column="1" Grid.Row="0" Background="#C8D1F4" />
+                                <TextBlock Text="Contact Phone #" Grid.Column="2" Grid.Row="0" Background="#C8D1F4" />
+                                <TextBlock Text="Contact eMail" Grid.Column="3" Grid.Row="0" Background="#C8D1F4" />
                             </Grid>
                         </Border>
                     </StackPanel>
